# HWinfoLogViewer

./: README.md  README_CN.md  components.d.ts  package.json  vite.config.ts
src/: App.vue  STYLE.md  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/config/: groups.toml
src-tauri/data/: 1.CSV  1_EN.CSV
src-tauri/src/: data_processor.rs  lib.rs  main.rs  models.rs
src-tauri/tests/: data_processor_test.rs  models_test.rs
src/components/: SensorChart.vue  SideBar.vue
src/locales/: en-US.ts  zh-CN.ts
src/router/: router.ts
src/stores/: appStore.ts  chartPrefs.ts
src/utils/: formatError.ts  hwinfoDateTime.ts  locale.ts  sensorLabel.ts
src/views/: Dashboard.vue  HomeView.vue  Settings.vue
